--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
 <p>
   Fork me? No, fork you!
+  Minor chages are done at at this line
 </p>
 <div id="rainbow-message" style="display:none">
 Double repositories all the way across the sky!<br/>
